// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/components/modal/ScoreImporter.vue snapshot test { loading: true } renders loading button 1`] = `
<div class="modal-card">
  <header class="modal-card-head">
    <h1 class="modal-card-title">スコアのインポート</h1>
  </header>
  <section class="modal-card-body">
    <ol>
      <li>e-amusement GATEにログインしてください。</li>
      <li><a target="_blank" href="https://p.eagate.573.jp/game/ddr/ddra20/p/playdata/music_detail.html?index=8Il6980di8P89lil1PDIqqIbiq1QO8lQ&amp;diff=1">楽曲データ詳細</a>
        のソースコードを取得し、コピーします。
        <ul>
          <li>
            Google Chrome, Firefox, Edge, Operaをお使いの方は、
            <a target="_blank" href="view-source:https://p.eagate.573.jp/game/ddr/ddra20/p/playdata/music_detail.html?index=8Il6980di8P89lil1PDIqqIbiq1QO8lQ&amp;diff=1">
              こちら
            </a>
            から直接ソースコードを表示できます。
          </li>
        </ul>
      </li>
      <li>
        下のテキストボックスに、コピーしたソースコードを貼り付けてください。
      </li>
    </ol>
    <div class="field">
      <!---->
      <div class="control is-clearfix"><textarea required="required" class="textarea"></textarea>
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
  </section>
  <footer class="modal-card-foot"><button type="button" class="button is-success is-loading">
      <!----> <span>
      登録
    </span>
      <!----></button></footer>
</div>
`;

exports[`/components/modal/ScoreImporter.vue snapshot test { sourceCode: "foo" } renders normal button 1`] = `
<div class="modal-card">
  <header class="modal-card-head">
    <h1 class="modal-card-title">スコアのインポート</h1>
  </header>
  <section class="modal-card-body">
    <ol>
      <li>e-amusement GATEにログインしてください。</li>
      <li><a target="_blank" href="https://p.eagate.573.jp/game/ddr/ddra20/p/playdata/music_detail.html?index=8Il6980di8P89lil1PDIqqIbiq1QO8lQ&amp;diff=1">楽曲データ詳細</a>
        のソースコードを取得し、コピーします。
        <ul>
          <li>
            Google Chrome, Firefox, Edge, Operaをお使いの方は、
            <a target="_blank" href="view-source:https://p.eagate.573.jp/game/ddr/ddra20/p/playdata/music_detail.html?index=8Il6980di8P89lil1PDIqqIbiq1QO8lQ&amp;diff=1">
              こちら
            </a>
            から直接ソースコードを表示できます。
          </li>
        </ul>
      </li>
      <li>
        下のテキストボックスに、コピーしたソースコードを貼り付けてください。
      </li>
    </ol>
    <div class="field">
      <!---->
      <div class="control is-clearfix"><textarea required="required" class="textarea"></textarea>
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
  </section>
  <footer class="modal-card-foot"><button type="button" class="button is-success">
      <!----> <span>
      登録
    </span>
      <!----></button></footer>
</div>
`;

exports[`/components/modal/ScoreImporter.vue snapshot test { sourceCode: null } renders disabled button 1`] = `
<div class="modal-card">
  <header class="modal-card-head">
    <h1 class="modal-card-title">スコアのインポート</h1>
  </header>
  <section class="modal-card-body">
    <ol>
      <li>e-amusement GATEにログインしてください。</li>
      <li><a target="_blank" href="https://p.eagate.573.jp/game/ddr/ddra20/p/playdata/music_detail.html?index=8Il6980di8P89lil1PDIqqIbiq1QO8lQ&amp;diff=1">楽曲データ詳細</a>
        のソースコードを取得し、コピーします。
        <ul>
          <li>
            Google Chrome, Firefox, Edge, Operaをお使いの方は、
            <a target="_blank" href="view-source:https://p.eagate.573.jp/game/ddr/ddra20/p/playdata/music_detail.html?index=8Il6980di8P89lil1PDIqqIbiq1QO8lQ&amp;diff=1">
              こちら
            </a>
            から直接ソースコードを表示できます。
          </li>
        </ul>
      </li>
      <li>
        下のテキストボックスに、コピーしたソースコードを貼り付けてください。
      </li>
    </ol>
    <div class="field">
      <!---->
      <div class="control is-clearfix"><textarea required="required" class="textarea"></textarea>
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
  </section>
  <footer class="modal-card-foot"><button type="button" disabled="disabled" class="button is-success">
      <!----> <span>
      登録
    </span>
      <!----></button></footer>
</div>
`;
